--- a/paddle/fluid/eager/CMakeLists.txt
+++ b/paddle/fluid/eager/CMakeLists.txt
@@ -9,6 +9,7 @@ set(eager_deps
     layer
     autograd_meta
     eager_nan_inf_utils
+    eager_tensor_dump_utils
     grad_node_info
     grad_tensor_holder
     custom_operator_node)
@@ -53,6 +54,10 @@ cc_library(
   eager_nan_inf_utils
   SRCS nan_inf_utils.cc
   DEPS phi common nan_inf_utils enforce)
+cc_library(
+  eager_tensor_dump_utils
+  SRCS tensor_dump_utils.cc
+  DEPS phi_tensor enforce)
 cc_library(
   grad_node_info
   SRCS grad_node_info.cc
